// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en ProductImage debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <img
    alt="Image"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`Pruebas en ProductImage debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<img
  alt="Image"
  className="productImg undefined"
  src="https://imagen.jpg"
/>
`;
